resolved #2
