# internal/handlers/getTimetable.go
@@ -2,30 +2,25 @@ package handlers
 
 import (
 	"encoding/json"
-	"fmt"
 	"net/http"
 
-	"github.com/go-chi/chi/v5"
 	log "github.com/sirupsen/logrus"
 	"github.com/transitIOM/projectMercury/api"
 	"github.com/transitIOM/projectMercury/internal/tools"
 )
 
-// @id				getTimetableByName
-// @tags			timetable
-// @summary		Takes a timetable name and returns the latest JSON timetable data with its corresponding version ID
-// @description	Returns the JSON timetable and its version ID
+// @id				getGTFSScheduleDownloadURL
+// @tags			GTFS Schedule
+// @summary		Get a download link for the latest data
+// @description	Returns a link to download GTFSSchedule.zip and the versionID
 // @produce		json
-// @param			name	path		string						true	"The name of the timetable you want (including .json)"	Format(json)	Pattern(name:^[A-Za-z]+$)
-// @success		200		{object}	api.GetTimetableResponse	"Returns the latest timetable with version ID"
-// @failure		400		{object}	api.Error					"Invalid timetable name"
-// @failure		500		{object}	api.Error					"Internal server error"
-// @router			/timetable/{name} [get]
-func getTimetableByName(w http.ResponseWriter, r *http.Request) {
-	timetableName := chi.URLParam(r, "name")
-	timetableName = fmt.Sprintf("timetable%s", ".json")
+// @success		200	{object}	api.GetTimetableResponse	"Returned a download link and versionID"
+// @failure		400	{object}	api.Error					"Invalid timetable name"
+// @failure		500	{object}	api.Error					"Internal server error"
+// @router			/schedule [get]
+func getGTFSScheduleDownloadURL(w http.ResponseWriter, r *http.Request) {
 
-	timetable, versionID, err := tools.GetLatestTimetable("timetables", timetableName)
+	downloadURL, versionID, err := tools.GetLatestGTFSScheduleURL()
 	if err != nil {
 		log.Error(err)
 		api.InternalErrorHandler(w)
@@ -33,9 +28,9 @@ func getTimetableByName(w http.ResponseWriter, r *http.Request) {
 	}
 
 	response := api.GetTimetableResponse{
-		VersionID: versionID,
-		File:      timetable,
-		Code:      http.StatusOK,
+		Code:        http.StatusOK,
+		DownloadURL: downloadURL.String(),
+		VersionID:   versionID,
 	}
 
 	w.Header().Set("Content-Type", "application/json")
